# theorem-dna

./: .gitignore  README.md  ROADMAP.md  VERIFY.cmd  pyproject.toml
.github/ISSUE_TEMPLATE/: claim.yml  corollary.yml  formalization.yml
.github/workflows/: isabelle.yml  lean.yml  ledger.yml  rocq.yml
data/corollaries/: not-permitted-implies-not-obligatory.dna.json  not-permitted-implies-not-obligatory.dna.manifest.json  not-permitted-implies-not-obligatory.json  not-permitted-implies-not-obligatory.manifest.json
data/formalizations/: not-permitted-implies-not-obligatory.lean4.json  obligation-implies-permission.isabelle.json  obligation-implies-permission.lean4.json  obligation-implies-permission.rocq.json
data/imports/: minimal-logic-import-v0.json
data/logic_profiles/: action-state-bridges-v0.json  adel0-action-logic-v0.json  contrary-to-duty-regressions-v0.json  (+4 more)
docs/: architecture.md  formalization-backlog.md  glossary.md  ledger-signatures.md  logic-profiles.md  module-conventions.md  theorem-dna-spec.md  vision.md
keys/: ledger-signing.pub.pem
schema/: claim.schema.json  corollary.schema.json  formalization.schema.json  import_graph.schema.json  ledger_event.schema.json  logic_profile.schema.json  milestone.schema.json  paper.schema.json  theorem_dna.schema.json  upstream_artifact.schema.json
scripts/: verify.cmd  verify.ps1
tests/: test_corollary.py  test_generate.py  test_hashes.py  test_import_graph.py  test_ledger.py  test_milestone.py  test_report.py  test_schema.py  test_signing.py  test_upstream_artifact.py
tools/: cli.py
(+43 files in other folders)
